--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -30,6 +30,19 @@
 
 <%= form_for(@message, html: { class: 'form-horizontal'}) do |f| %>
   
+  <% if @message.errors.present? %>
+    <div class="alert alert-danger">
+      <%= alert %>
+      <ul>
+        <% @message.errors.full_messages.each do |full_message| %>
+          <li>
+            <%= full_message %>
+          </li>
+        <% end %> 
+      </ul>
+    </div>
+  <% end %>
+  
   <!-- 入力欄：名前 -->
   <div class="form-group">
     <%= f.label :name, '名前', class: 'form-label col-sm-offset-2 col-sm-1' %>
