--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -24,14 +24,19 @@
      font-family: "メイリオ", Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", sans-serif;
 }
 
-// ここ後で修正
-.field_with_errors{
-  display: inline-block;
-  border: 1px solid #f00;
-  width: 100%;
-}
-ぁんｃ
+/**************************************************
+  .field_with_errors
+    textarea, input
 
+  border: 1px solid #f00;
+          エラー項目を赤枠化
+
+ **************************************************/
+.field_with_errors{
+  textarea, input {
+    border: 1px solid #f00;
+  }
+}
 
 /**************************************************
   .form-group 
