--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,14 @@
   
     <!-- maincontents-->
     <div class="container">
+      
+      <!-- alertcheck -->
+      <% if notice %>
+        <div class="alert alert-info">
+          <%= notice %>
+        </div>
+      <% end %>
+
       <%= yield %>
     </div>
 
