add column:age & task3 commit

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -83,6 +83,16 @@
 }
 
 /**************************************************
+  .edi-des-label
+
+  text-align: 要素右寄せ
+
+ **************************************************/
+.edi-des-label {
+  text-align: right;
+}
+
+/**************************************************
   footer
 
   margin: 外側余白 上下左右0
