--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -21,7 +21,15 @@
       <%= f.text_field :name, class: 'form-control' %>
     </div>
   </div>
-  
+
+  <!-- 入力欄：年齢 -->
+  <div class="form-group">
+    <%= f.label :age, '年齢', class: 'form-label col-sm-offset-2 col-sm-1' %>
+    <div class="col-sm-6">
+      <%= f.text_field :age, class: 'form-control' %>
+    </div>
+  </div>
+
   <!-- 入力欄：内容 -->
   <div class="form-group">
     <%= f.label :body, '内容', class: 'form-label col-sm-offset-2 col-sm-1' %>
